# MyBitcoin

./: .gitignore  CMakeLists.txt  DevLog.md  MyBitcoin.sln  MyBitcoin.vcxproj  MyBitcoin.vcxproj.filters  RCa40900  Readme.md
src/: main.cpp
src/Core/: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  Merkle.cpp  Merkle.h  Transaction.cpp  Transaction.h
src/Crypto/: Hash.cpp  Hash.h
src/Utils/: Serialization.h
src/Wallet/: Base58.cpp  Base58.h  Wallet.cpp  Wallet.h
tests/: test_block.cpp  test_blockchain.cpp  test_crypto.cpp  test_difficulty.cpp  test_main.cpp  test_persistence.cpp  test_transaction.cpp  test_wallet.cpp  test_wallet_persistence.cpp  test_wallet_tx.cpp
